Added new company facts endpoints and all
